feat(server): improve GitHub app integration
