# cli/Sources/TuistServer/OpenAPI/server.yml
@@ -2852,20 +2852,20 @@ paths:
             type: integer
             x-struct:
             x-validate:
-        - description: Number of items per page.
-          in: query
-          name: page_size
-          required: false
-          schema:
-            type: integer
-            x-struct:
-            x-validate:
         - description: Filter bundles by git branch.
           in: query
           name: git_branch
           required: false
           schema:
             type: string
+            x-struct:
+            x-validate:
+        - description: Number of items per page.
+          in: query
+          name: page_size
+          required: false
+          schema:
+            type: integer
             x-struct:
             x-validate:
         - description: The handle of the account.
@@ -5355,11 +5355,6 @@ paths:
                   type: string
                   x-struct:
                   x-validate:
-                repository_url:
-                  description: The repository URL for the project.
-                  type: string
-                  x-struct:
-                  x-validate:
                 visibility:
                   description: The visibility of the project. Public projects are visible to everyone, private projects are only visible to the project's members.
                   enum:
@@ -5385,7 +5380,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-          description: The request is invalid, for example when attempting to link the project to a repository the authenticated user doesn't have access to.
+          description: The request is invalid
         '401':
           content:
             application/json:
